runs/slurm-26069.out
Loading parflow-ml/latest
  Loading requirement: openmpi/gcc/4.1.0 parflow/3.9.0 gdal/3.2.1
Traceback (most recent call last):
  File "lstm_sbi.py", line 26, in <module>
    from lstm_build_utils import LSTM, runLSTM
  File "/home/qh8373/SBI_TAYLOR/sbi_taylor/scripts/03_sbi_lstm/lstm_build_utils.py", line 133
    def runLSTM(lstm, criterion, optimizer, train_dl, valid_dl=None, num_epochs, save, save_path):
                ^
SyntaxError: non-default argument follows default argument
